Updates to some newer APIs and resolves some basic IDE warnings (#7)
* [Generic] Use diamond types instead of explicitly declaring types everywhere

* [Lum] Make error endpoint follow proper naming conventions

* [Generic] Use method reference instead of calling inside of the lambda

* [Generic] Cleanup some string handling code with more appropriate method calls

* [ML] Cleanup some regexes

* [ML] Cleanup some regexes part 2

* [Lum] performance improvements

* [Lum] make what can be final, final

* [Lum] remove unneeded assignments

* [Lum] remove some unused Exceptions

Co-authored-by: rakosi2 <rattila5@hotmail.com>